# surreal

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  README.md
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
examples/: early_return.dream  enum_example.dream  file_example.dream  genserver_example.dream  impl_test.tb  inspect_example.dream  iterator_example.dream  map_example.dream  math.dream  option.tb  option_example.dream  process_demo.dream  recv_simple.dream  result.tb  result_example.dream  script_example.surreal  spawn_test.dream  stdlib_demo.dream  supervisor_example.dream  try_operator.dream  type_aliases.dream  union_types.dream
examples/basics/: stdlib_test.dream  stdlib_test.sur
examples/collections/: enumerable.surreal  hashmap.surreal
examples/concurrency/: genserver.surreal
src/: bindgen.rs  config.rs  deps.rs  instruction.rs  lib.rs  main.rs  module.rs  process.rs  repl.rs  scheduler.rs  value.rs  wasm.rs
stdlib/: application.dream  convert.sur  display.dream  display.surreal  enumerable.dream  file.dream  file.surreal  genserver.dream  inspect.dream  io.dream  iterator.dream  iterator.surreal  keyword.dream  keyword.sur  list.sur  logger.dream  map.dream  map.sur  option.dream  option.sur  proc_macro.dream  proc_macro.surreal  process.dream  result.dream  result.surreal  string.dream  string.sur  supervisor.dream  syn.dream  syn.surreal  system.dream  term.dream  term.sur  timer.dream  timer.sur
stubs/: erlang.dreamt
tests/: compile_snapshots.rs
tree-sitter-toybeam/: grammar.js
(+151 files in other folders)
